hphp/hack/test/sound_dynamic/typing/sound_dynamic_callable_3.bad.php.exp
File "sound_dynamic_callable_3.bad.php", line 8, characters 5-22:
Method  `foo` in class `C` is not dynamically callable. (Typing[4110])
  File "sound_dynamic_callable_3.bad.php", line 8, characters 5-22:
  Typing error
  File "sound_dynamic_callable_3.bad.php", line 8, characters 15-22:
  Expected `vec<int>`
  File "sound_dynamic_callable_3.bad.php", line 7, characters 32-33:
  But got `dynamic` because method must be callable in a dynamic context
