hphp/hack/test/sound_dynamic/typing/sound_dynamic_callable_3.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.
<<file:__EnableUnstableFeatures('upcast_expression')>>

class C {
  <<__SupportDynamicType>>
  public function foo(vec<int> $x):int {
    $x upcast vec<int>;
    return $x[0];
  }
}
